fixed navbar layout issue and changed to bootstrap 4 cdn

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -1,10 +1,11 @@
-@import "bootstrap";
+
+@mixin box_sizing {
+  -moz-box-sizing:    border-box;
+  -webkit-box-sizing: border-box;
+  box-sizing:         border-box;
+}
 
 /* universal */
-
-body {
-  padding-top: 90px;
-}
 
 section {
   overflow: auto;
@@ -96,4 +97,14 @@ list-style: none;
 footer ul li {
 float: left;
 margin-left: 15px;
+}
+
+/* miscellaneous */
+
+.debug_dump {
+  clear: both;
+  float: left;
+  width: 100%;
+  margin-top: 45px;
+  @include box_sizing;
 }
